# uniws-ws

./: .gitignore  .gitmodules  install.sh  pyproject.toml  release.sh
.uniws/: hardware.py  software.py  swa.sh  swf.sh  swt.sh
code/: pyproject.toml
etc/: .gitignore  pyproject.toml
test/: Dockerfile  test_shell.py  test_uniws.py  test_uniws_hw.py  test_uniws_hw_action.py  test_uniws_hw_power.py  test_uniws_init.py  test_uniws_sw_action.py  test_uniws_sw_build.py  test_uniws_sw_clean.py  test_uniws_sw_fetch.py  test_uniws_sw_install.py  test_uniws_sw_test.py
test/test_uniws_hw_power/0002/.uniws/: hwp.sh
test/test_uniws_hw_shell/0002/.uniws/: hws.sh
test/test_uniws_sw_action/0002/.uniws/: swa.sh
tmp/: .gitignore  pyproject.toml
