[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniws"
description = "Python CLI and API for a uniform workspace"
version = "0.7.1"
readme = "uniws/README.md"
license = {file = "uniws/LICENSE"}
requires-python = ">= 3.6"
dependencies = [
  'argapp >= 0.7',
]
authors = [
  {name = "Deo Hayer", email = "deohayer@mail.com"},
]
maintainers = [
  {name = "Deo Hayer", email = "deohayer@mail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "Topic :: Software Development",

  "License :: OSI Approved :: MIT License",

  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "cli",
  "api",
  "development",
  "workspace",
]

[project.urls]
Repository = "https://github.com/deohayer/uniws.git"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "uniws/template",
  "uniws/*.py",
  "uniws/LICENSE",
  "uniws/README.md",
]

[project.scripts]
uniws = "uniws.uniws:uniws"
