[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniws"
description = "Python CLI and API for a uniform workspace"
version = "0.4.0"
readme = "uniws/README.md"
license = {file = "uniws/LICENSE"}
requires-python = ">= 3.6"
dependencies = [
  'argapp >= 0.5.0',
]
authors = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
maintainers = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "Topic :: Software Development",

  "License :: OSI Approved :: MIT License",

  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "cli",
  "api",
  "development",
  "workspace",
]

[project.urls]
Repository = "https://github.com/deohayer/uniws.git"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "uniws/template",
  "uniws/*.py",
  "uniws/LICENSE",
  "uniws/README.md",
]

[project.scripts]
uniws = "uniws.uniws:uniws"
uhc = "uniws.uniws:uhc"
uhp = "uniws.uniws:uhp"
uhu = "uniws.uniws:uhu"
uhd = "uniws.uniws:uhd"
uhs = "uniws.uniws:uhs"
uhw = "uniws.uniws:uhw"
uha = "uniws.uniws:uha"
usf = "uniws.uniws:usf"
usb = "uniws.uniws:usb"
usi = "uniws.uniws:usi"
ust = "uniws.uniws:ust"
usr = "uniws.uniws:usr"
usc = "uniws.uniws:usc"
usp = "uniws.uniws:usp"
usa = "uniws.uniws:usa"
