[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniws"
description = "Python CLI and API for a uniform workspace"
version = "0.6.0"
readme = "uniws/README.md"
license = {file = "uniws/LICENSE"}
requires-python = ">= 3.6"
dependencies = [
  'argapp >= 0.7',
]
authors = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
maintainers = [
  {name = "Volodymyr Zakalyk", email = "volodymyr.zakalyk@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "Topic :: Software Development",

  "License :: OSI Approved :: MIT License",

  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "cli",
  "api",
  "development",
  "workspace",
]

[project.urls]
Repository = "https://github.com/deohayer/uniws.git"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "uniws/template",
  "uniws/*.py",
  "uniws/LICENSE",
  "uniws/README.md",
]

[project.scripts]
uws = "uniws.uniws:uws"
uhc = "uniws.uniws:uhc"
uhp = "uniws.uniws:uhp"
uhu = "uniws.uniws:uhu"
uhd = "uniws.uniws:uhd"
uhs = "uniws.uniws:uhs"
uha = "uniws.uniws:uha"
usd = "uniws.uniws:usd"
usb = "uniws.uniws:usb"
usi = "uniws.uniws:usi"
ust = "uniws.uniws:ust"
usc = "uniws.uniws:usc"
usa = "uniws.uniws:usa"
